# OrcRPC

./: Cargo.toml  README.md
crates/core-macros/: Cargo.toml
crates/core-macros/src/: describe_ok.rs  describe_value.rs  lib.rs
crates/core-macros/tests/: describe_macros.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: action.rs  error.rs  external_method.rs  interceptor.rs  lib.rs  orchestrator.rs  runtime.rs  transcript.rs
crates/orchestrator/src/action/: action_handler.rs  action_registry.rs  actions.rs  builtin_registry.rs  registered_action_handler.rs  typed_action_handler.rs
crates/orchestrator/src/error/: action.rs  config.rs  external_method_error.rs
crates/orchestrator/src/external_method/: catalog.rs  config.rs  method_descriptor.rs
crates/orchestrator/src/interceptor/: config.rs  initialization.rs  interceptor_catalog.rs  interceptor_pipeline.rs  json_backed_interceptor.rs  traits.rs
crates/orchestrator/src/runtime/: call_execution.rs  call_execution_factory.rs  call_runtime.rs  default_orchestrator.rs  orchestrator_resources.rs  phase_runtime.rs
crates/orchestrator/tests/: action_registry.rs  default_orchestrator.rs  interceptor_pipeline.rs  interceptor_policy.rs  runtime_state.rs
crates/transport/: Cargo.toml
crates/transport/src/: client.rs  error.rs  factory.rs  framing.rs  lib.rs  provider.rs  target.rs
crates/transport/src/client/: http.rs  local_ipc.rs  stdio.rs  tcp.rs  web_socket.rs
crates/transport/src/factory/: default_json_rpc_client_factory.rs  (+1 more)
crates/transport/tests/: provider.rs  stdio.rs  target.rs  tcp.rs
(+98 files in other folders)
