[package]
name = "actrpc-core-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1.0"
actrpc-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
