[package]
name = "actrpc_orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.8.7"
toml = "1.1.2"
thiserror = "2.0.18"

actrpc_core = { path = "../core" }
actrpc_transport = { path = "../transport" }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
