[package]
name = "actrpc-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
interprocess = { version = "2.4.2", features = ["tokio"] }
async-trait = "0.1.89"
tokio = { version = "1.52.1", features = [
  "process",
  "net",
  "io-util",
  "time",
  "sync",
  "macros",
  "rt-multi-thread",
] }

reqwest = { version = "0.13.3", default-features = false, features = [
  "json",
  "rustls",
] }
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-webpki-roots",
] }
futures-util = "0.3.32"

actrpc-core = { path = "../core" }
